--- a/JHaaS/Dockerfile
+++ b/JHaaS/Dockerfile
@@ -6,10 +6,11 @@ FROM jupyter/scipy-notebook
 # install missing ubuntu packages
 USER root
 RUN apt-get -y update
-RUN apt-get -y install bc
+RUN apt-get -y install bc bsdmainutils time
 
 # variables for docker file
 ARG CE_TOUR=bioinftour
+ARG CE_RNASEQ=rnaseq
 ARG BRANCH=exercises
 
 ARG NB_UID=1000
@@ -38,14 +39,33 @@ RUN usermod -a  -G biologists ${NB_USER}
 # create conda environment for bioinformatics tour
 USER ${NB_UID}
 COPY envs/msmoabs_tour.yaml msmoabs_tour.yaml
-RUN conda env create --yes --name ${CE_TOUR} --file msmoabs_tour.yaml 
-
-RUN git clone -b ${BRANCH} https://github.com/jlab/teaching_MS-MO-ABS.git
-
+RUN mamba env create --yes --name ${CE_TOUR} --file msmoabs_tour.yaml 
 # to be in sync with screenshots in my slides
 RUN ln -s /opt/conda/envs/${CE_TOUR}/bin/cd-hit /opt/conda/envs/${CE_TOUR}/bin/cdhit
 
-# TODO: move to the top!
-USER root
-RUN apt-get -y install bsdmainutils time
-USER ${NB_UID}
+# create conda environment for RNAseq analyes
+COPY envs/msmoabs_rnaseq.yaml msmoabs_rnaseq.yaml
+RUN mamba env create --yes --name ${CE_RNASEQ} --file msmoabs_rnaseq.yaml 
+
+# PREPARE DATA FOR STUDENTS
+RUN mkdir ~/biodata/ 
+# 1. hg19 bowtie2 index: ~7.3 GB data
+# There are three alternative routes
+#    a) download assembly and build index yourself  (takes too much compute)
+#        cd ~/biodata && wget https://hgdownload.soe.ucsc.edu/goldenPath/hg19/bigZips/hg19.fa.gz
+#        gunzip ~/biodata/hg19.fa.gz
+#        SHELL ["conda", "run", "-n", "rnaseq", "/bin/bash", "-c"]
+#        bowtie2-build --threads 8 ~/biodata/hg19.fa ~/biodata/hg19_full
+#    b) download from original source
+#        RUN cd ~/biodata && wget https://genome-idx.s3.amazonaws.com/bt/hg19.zip && unzip hg19.zip
+#    c) copy into container, if rebuilding more frequently
+COPY DL/*.bt2 biodata/
+
+
+RUN git clone -b ${BRANCH} https://github.com/jlab/teaching_MS-MO-ABS.git
+#
+## TODO: move to the top!
+#USER root
+#RUN apt-get -y install bsdmainutils time
+#USER ${NB_UID}
+#
