--- a/JHaaS/Snakefile
+++ b/JHaaS/Snakefile
@@ -1,7 +1,7 @@
 from os.path import join, abspath, relpath, dirname
 
 configfile: 'settings.yaml'
-localrules: build_image, exec_tests_unix, exec_tests_tour, exec_tests_ngs, exec_tests_python, exec_tests_rnaseq, file_notebook
+localrules: build_image, exec_tests_unix, exec_tests_tour, exec_tests_ngs, exec_tests_python, exec_tests_rnaseq, file_notebook, rnaseq_prepare_dge
 
 #def get_proxy_calls():
 #  if 'proxy' in config.keys():
@@ -20,7 +20,9 @@ rule build_image:
   input:
     env_tour='Tour/env_tour.yaml',
     env_rnaseq='RNAseq/env_rnaseq.yaml',
+    env_dge='RNAseq/env_dge.yaml',
     env_ngs='NGS/env_ngs.yaml',
+    env_chipseq='ChIPseq/env_chipseq.yaml',
     docker='jhaas.dockerfile'
   output:
     "%s/jhaas_image.txt" % relpath(config['dir_dist'])
@@ -34,7 +36,7 @@ rule build_image:
     tag=config['podman']['tagprefix']
   shell:
     'tmp=`mktemp -d` 2> {log}'
-    ' && cp {input.env_tour} {input.env_rnaseq} {input.env_ngs} {input.docker} $tmp 2>> {log}'
+    ' && cp {input.env_tour} {input.env_rnaseq} {input.env_dge} {input.env_chipseq} {input.env_ngs} {input.docker} $tmp 2>> {log}'
     ' && podman build $tmp -f $tmp/{input.docker} -t {params.tag} --format=docker --build-arg http_proxy="{params.proxy}" --build-arg https_proxy="{params.proxy}" --build-arg ftp_proxy="{params.proxy}" 2>> {log} > {output}'
     ' && rm -rf $tmp 2>> {log}'
     ' && echo "image built" > {output} 2>> {log}'
@@ -106,7 +108,7 @@ rule download_sra_SE:
     file='|'.join([name for name, item in config['downloads'].items() if 'type' in item.keys() and item['type'] == 'SRA_SE'])
   resources:
     ntasks="2",
-    mem_mb="2000"
+    mem_mb="4000"
   conda:
     "Envs/env_download.yaml"
   params:
@@ -118,7 +120,7 @@ rule download_sra_SE:
     ' && export https_proxy="{params.proxy}" 2>> {log}'
     ' && export ftp_proxy="{params.proxy}" 2>> {log}'
     ' && tmp=`mktemp -d` 2>> {log}'
-    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp 2>> {log}'
+    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /tmp/ 2>> {log}'
     ' && md5sum -c <<<"{params.md5} `readlink -f $tmp/*.fastq`" 2>> {log} 1>&2'
     ' && cat $tmp/*.fastq | gzip -k -9 -c > {output} 2>> {log}'
     ' && rm -rf $tmp 2>> {log}'
@@ -131,6 +133,7 @@ include: "Tour/tour.snakemake"
 include: "NGS/ngs.snakemake"
 include: "Python/python.snakemake"
 include: "RNAseq/rnaseq.snakemake"
+include: "ChIPseq/chipseq.snakemake"
 
 #~ rule all:
   #~ input:
